--- a/.github/workflows/notion_insert_mock.yml
+++ b/.github/workflows/notion_insert_mock.yml
@@ -33,24 +33,13 @@ jobs:
       - name: Validate required secrets for MOCK
         env:
           _RSS_URL: ${{ secrets.RSS_URL }}
-          _NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          _NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-          _DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }} # 任意
         run: |
           set -e
           if [ -z "${_RSS_URL}" ]; then
             echo "❌ Required secret is missing: RSS_URL" >&2
             exit 1
           fi
-          if [ -z "${_NOTION_API_KEY}" ]; then
-            echo "❌ Required secret is missing: NOTION_API_KEY" >&2
-            exit 1
-          fi
-          if [ -z "${_NOTION_DATABASE_ID}" ]; then
-            echo "❌ Required secret is missing: NOTION_DATABASE_ID" >&2
-            exit 1
-          fi
-          echo "✅ All required secrets for MOCK are present (DEEPL_API_KEY is optional)."
+          echo "✅ RSS_URL is present."
 
       - name: Backup repository to local-like storage
         run: |
@@ -66,6 +55,7 @@ jobs:
           DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
           set -e
           echo "=== 運用テスト実行中 ==="
